PulseAudio policy
The playlist should follow the PulseAudio policy event. This may require a control plugin or something similar.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont changed milestone to %Features paradize
changed milestone to %Features paradize
- Rémi Denis-Courmont assigned to @Courmisch and unassigned @MigrationBot
assigned to @Courmisch and unassigned @MigrationBot
- Rémi Denis-Courmont removed Component::Core: Audio output label
removed Component::Core: Audio output label
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont changed milestone to %2.1 features
changed milestone to %2.1 features
- Rémi Denis-Courmont closed
closed
commit 5d837145 Author: Rémi Denis-Courmont remi@remlab.net Date: Wed Aug 8 19:17:33 2012 +0300
PulseAudio: set the media role on streams (fixes [#5101](https://code.videolan.org/videolan/vlc/-/issues/5101))
Original author: remi@remlab.net
commit 7d19f1dd Author: Rémi Denis-Courmont remi@remlab.net Date: Wed Aug 8 19:20:03 2012 +0300
PulseAudio: report policy stream events (refs [#5101](https://code.videolan.org/videolan/vlc/-/issues/5101))
Original author: remi@remlab.net
- Rémi Denis-Courmont mentioned in issue #7204 (closed)
mentioned in issue #7204 (closed)
Please register or sign in to reply