PulseAudio: set the media role on streams (fixes #5101)